@@ -506,9 +506,6 @@
     <ClCompile Include="MergeWizardOptions.cpp">
       <Filter>Commands\Merge</Filter>
     </ClCompile>
-    <ClCompile Include="MergeWizardReintegrate.cpp">
-      <Filter>Commands\Merge</Filter>
-    </ClCompile>
     <ClCompile Include="MergeWizardRevRange.cpp">
       <Filter>Commands\Merge</Filter>
     </ClCompile>
@@ -1448,9 +1445,6 @@
       <Filter>Commands\Merge</Filter>
     </ClInclude>
     <ClInclude Include="MergeWizardOptions.h">
-      <Filter>Commands\Merge</Filter>
-    </ClInclude>
-    <ClInclude Include="MergeWizardReintegrate.h">
       <Filter>Commands\Merge</Filter>
     </ClInclude>
     <ClInclude Include="MergeWizardRevRange.h">
